# allocators-c

./: .gitignore  CMakeLists.txt  README.md  allocators.h  main.c
src/: allocators.h  allocators_linear.c  allocators_pool.c  allocators_stack.c  main.c  utils.c  utils.h
